--- a/.dev.env
+++ b/.dev.env
@@ -4,6 +4,10 @@ APP_HOSTNAME=http://localhost:3000
 ALLOWED_DOMAINS=http://localhost:4000,http://localhost:5000
 LOG_LEVEL=debug
 
+# Secrets
+JWT_TOKEN_SECRET=_!S3cR37!*_$
+JWT_TOKEN_EXPIRES_IN=3601
+
 # DB
 DB_TYPE=postgres
 DB_HOST=localhost
