--- a/.dev.env
+++ b/.dev.env
@@ -1,12 +1,14 @@
 # App
 PORT=3000
-APP_HOSTNAME=http://localhost:3000
+APP_HOSTNAME=localhost
 ALLOWED_DOMAINS=http://localhost:4000,http://localhost:5000
 LOG_LEVEL=debug
 
-# Secrets
+# Security
 JWT_TOKEN_SECRET=_!S3cR37!*_$
 JWT_TOKEN_EXPIRES_IN=3601
+DEFAULT_PASSPORT_STRATEGY=jwt
+JWT_SUBJECT=auth
 
 # DB
 DB_TYPE=postgres
