--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/joi": "^14.3.4",
     "@types/lodash": "^4.14.162",
     "@types/node": "^13.9.1",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
