feat: token service

--- a/.dev.env
+++ b/.dev.env
@@ -5,8 +5,10 @@ ALLOWED_DOMAINS=http://localhost:4000,http://localhost:5000
 LOG_LEVEL=debug
 
 # Security
-JWT_TOKEN_SECRET=_!S3cR37!*_$
-JWT_TOKEN_EXPIRES_IN=3601
+JWT_PASSPORT_TOKEN_SECRET=_!S3cR37!*_$
+JWT_STUDIO_TOKEN_SECRET=__S3*cr37$!$_a
+JWT_MEDIA_TOKEN_SECRET=S3cr3t$343@
+JWT_TOKEN_EXPIRES_IN=3600
 DEFAULT_PASSPORT_STRATEGY=jwt
 JWT_SUBJECT=auth
 
