--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "joi": "^17.2.1",
     "lodash": "^4.17.20",
@@ -53,6 +54,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
