--- a/.dev.env
+++ b/.dev.env
@@ -1,16 +1,19 @@
 # App
 PORT=3000
 APP_HOSTNAME=localhost
-ALLOWED_DOMAINS=http://localhost:4000,http://localhost:5000
+ALLOWED_DOMAINS=http://localhost:4000,http://localhost:5000,http://localhost:8080
 LOG_LEVEL=debug
 
 # Security
+JWT_REFRESH_TOKEN_SECRET=1337S371K!!!*(%_a
 JWT_PASSPORT_TOKEN_SECRET=_!S3cR37!*_$
 JWT_STUDIO_TOKEN_SECRET=__S3*cr37$!$_a
 JWT_MEDIA_TOKEN_SECRET=S3cr3t$343@
-JWT_TOKEN_EXPIRES_IN=3600
+JWT_ACCESS_TOKEN_EXPIRES_IN=3600
+JWT_REFRESH_TOKEN_EXPIRES_IN=604800
 DEFAULT_PASSPORT_STRATEGY=jwt
 JWT_SUBJECT=auth
+TOKENS_PREFIX=token.
 
 # DB
 DB_TYPE=postgres
