--- a/.dev.env
+++ b/.dev.env
@@ -1,10 +1,12 @@
 # App
 PORT=3000
 APP_HOSTNAME=localhost
+ALLOWED_HEADERS=Accept,Authorization,Content-Type,If-Match,If-None-Match,Cache-Control,Pragma,Expires
 ALLOWED_DOMAINS=http://localhost:4000,http://localhost:5000,http://localhost:8080
 LOG_LEVEL=debug
 
 # Security
+COOKIE_SECRET=SuP3r_)$eCR37!(_34
 JWT_REFRESH_TOKEN_SECRET=1337S371K!!!*(%_a
 JWT_PASSPORT_TOKEN_SECRET=_!S3cR37!*_$
 JWT_STUDIO_TOKEN_SECRET=__S3*cr37$!$_a
