--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "class-validator": "^0.12.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
+    "helmet": "^4.2.0",
     "joi": "^17.2.1",
     "lodash": "^4.17.20",
     "passport": "^0.4.1",
