feat: rest to graphql

--- a/.dev.env
+++ b/.dev.env
@@ -4,6 +4,8 @@ APP_HOSTNAME=localhost
 ALLOWED_HEADERS=Accept,Authorization,Content-Type,If-Match,If-None-Match,Cache-Control,Pragma,Expires
 ALLOWED_DOMAINS=http://localhost:4000,http://localhost:5000,http://localhost:8080
 LOG_LEVEL=debug
+NODE_ENV=development
+API_VERSION=v1
 
 # Security
 COOKIE_SECRET=SuP3r_)$eCR37!(_34
@@ -15,7 +17,6 @@ JWT_ACCESS_TOKEN_EXPIRES_IN=3600
 JWT_REFRESH_TOKEN_EXPIRES_IN=604800
 DEFAULT_PASSPORT_STRATEGY=jwt
 JWT_SUBJECT=auth
-TOKENS_PREFIX=token.
 
 # DB
 DB_TYPE=postgres
