--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "singleQuote": true,
   "semi": true,
   "printWidth": 120,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "bracketSpacing": true
 }
