--- a/.dev.env
+++ b/.dev.env
@@ -1,28 +1,38 @@
 # App
 PORT=3000
-APP_HOSTNAME=localhost
-ALLOWED_HEADERS=Accept,Authorization,Content-Type,If-Match,If-None-Match,Cache-Control,Pragma,Expires
-ALLOWED_DOMAINS=http://localhost:4000,http://localhost:5000,http://localhost:8080
-LOG_LEVEL=debug
-NODE_ENV=development
-API_VERSION=v1
+APP_HOSTNAME='localhost'
+ALLOWED_HEADERS='Accept,Authorization,Content-Type,If-Match,If-None-Match,Cache-Control,Pragma,Expires'
+ALLOWED_DOMAINS='http://localhost:4000,http://localhost:5000,http://localhost:8080'
+LOG_LEVEL='debug'
+NODE_ENV='development'
+API_VERSION='v1'
 
 # Security
-COOKIE_SECRET=SuP3r_)$eCR37!(_34
-JWT_REFRESH_TOKEN_SECRET=1337S371K!!!*(%_a
-JWT_PASSPORT_TOKEN_SECRET=_!S3cR37!*_$
-JWT_STUDIO_TOKEN_SECRET=__S3*cr37$!$_a
-JWT_MEDIA_TOKEN_SECRET=S3cr3t$343@
+COOKIE_SECRET='SuP3r_)$eCR37!(_34'
+JWT_REFRESH_TOKEN_SECRET='1337S371K!!!*(%_a'
+JWT_PASSPORT_TOKEN_SECRET='_!S3cR37!*_$'
+JWT_STUDIO_TOKEN_SECRET='__S3*cr37$!$_a'
+JWT_MEDIA_TOKEN_SECRET='S3cr3t$343@'
 JWT_ACCESS_TOKEN_EXPIRES_IN=3600
 JWT_REFRESH_TOKEN_EXPIRES_IN=604800
-DEFAULT_PASSPORT_STRATEGY=jwt
-JWT_SUBJECT=auth
+DEFAULT_PASSPORT_STRATEGY='jwt'
+JWT_SUBJECT='auth'
 
 # DB
-DB_TYPE=postgres
-DB_HOST=localhost
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_NAME=postgres
+DB_TYPE='postgres'
+DB_HOST='localhost'
+DB_PORT=5433
+DB_USERNAME='passport'
+DB_PASSWORD='5e543256c480ac577d30f76f9120eb74'
+DB_NAME='postgres'
 DB_LOGGING=true
 DB_SYNCHRONIZE=true
+
+# Redis
+REDIS_NAME='xbeat'
+REDIS_KEY_PREFIX='passport:'
+REDIS_HOST='localhost'
+REDIS_PORT=6380
+REDIS_PASSWORD='SuP3R_!S3re7&_*'
+REDIS_RETRY_STRATEGY=5
+REDIS_SEPARATOR=':'
