--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "helmet": "^4.2.0",
     "joi": "^17.2.1",
     "lodash": "^4.17.20",
+    "nestjs-redis": "^1.2.8",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.4.1",
@@ -49,7 +50,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.4",
-    "typeorm": "^0.2.28"
+    "typeorm": "^0.2.28",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -68,6 +70,7 @@
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
     "eslint": "7.1.0",
