feat: users and location relations

--- a/.dev.env
+++ b/.dev.env
@@ -30,7 +30,7 @@ DB_SYNCHRONIZE=true
 
 # Redis
 REDIS_NAME='xbeat'
-REDIS_KEY_PREFIX='passport:'
+REDIS_KEY_PREFIX='passport'
 REDIS_HOST='localhost'
 REDIS_PORT=6380
 REDIS_PASSWORD='SuP3R_!S3re7&_*'
