--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   postgres:
     image: postgres:alpine
     container_name: psql-xbeat
+    volumes:
+      - psql-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=postgres
     ports:
@@ -11,6 +13,12 @@ services:
   redis:
     image: redis:alpine
     container_name: redis-xbeat
-    command: redis-server --requirepass SuP3R_!S3re7&_*
+    command: redis-server --appendonly yes --requirepass SuP3R_!S3re7&_*
+    volumes:
+      - redis-data:/data
     ports:
       - 6380:6379
+
+volumes:
+  redis-data: {}
+  psql-data: {}
