refactor: avatar and naming

--- a/.dev.env
+++ b/.dev.env
@@ -22,7 +22,7 @@ JWT_SUBJECT='auth'
 DB_TYPE='postgres'
 DB_HOST='localhost'
 DB_PORT=5433
-DB_USERNAME='passport'
+DB_USERNAME='application'
 DB_PASSWORD='5e543256c480ac577d30f76f9120eb74'
 DB_NAME='postgres'
 DB_LOGGING=true
