feat: emails sending

--- a/.dev.env
+++ b/.dev.env
@@ -36,3 +36,13 @@ REDIS_PORT=6379
 REDIS_PASSWORD='SuP3R_!S3re7&_*'
 REDIS_RETRY_STRATEGY=5
 REDIS_SEPARATOR=':'
+
+# RabbitMQ
+AMQP_URL='amqp://mqadmin:mqadmin@localhost'
+
+# Microservices
+# Clients
+CLIENT_ID='http://localhost:8080'
+CLIENT_PLAYER='http://localhost:6060'
+CLIENT_HOMEPAGE='http://localhost:7070'
+# CLIENT_ARTIST='http://localhost:7070'
