--- a/.dev.env
+++ b/.dev.env
@@ -2,7 +2,7 @@
 PORT=3000
 APP_HOSTNAME='localhost'
 ALLOWED_HEADERS='Accept,Authorization,Content-Type,If-Match,If-None-Match,Cache-Control,Pragma,Expires'
-ALLOWED_DOMAINS='http://localhost:4000,http://localhost:5000,http://localhost:8080'
+ALLOWED_DOMAINS='http://localhost:4000,http://localhost:5000,http://localhost:8080,http://localhost:6060,http://localhost:7070,http://localhost:9090'
 LOG_LEVEL='debug'
 NODE_ENV='development'
 API_VERSION='v1'
