--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -28,9 +28,9 @@
     "@nestjs/graphql": "^7.8.2",
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/swagger": "^4.6.1",
     "@nestjs/typeorm": "^7.1.4",
+    "@xbeat/server-toolkit": "file:../server-toolkit/xbeat-server-toolkit-1.0.0.tgz",
+    "@xbeat/toolkit": "file:../toolkit/xbeat-toolkit-1.0.0.tgz",
     "apollo-server-express": "^2.19.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
@@ -49,7 +49,6 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.28",
     "uuid": "^8.3.2"
   },
